# skyron

./: Makefile  PRD_V1.MD  PRD_V2.MD  README.MD
backend/: .env.example  .gitignore  Dockerfile  Makefile  manage.py  melodii_backend.spec  pyproject.toml
backend/launcher/: run_backend.py
backend/makefiles/: fail2ban.mk  git.mk  vps.mk
backend/models/: README.md
backend/nginx/: Dockerfile  nginx.conf  start-nginx.sh
backend/nginx/conf.d/: app.conf.template
backend/scripts/: api.yaml  create_django_app.py  extract_swagger_links.py  generate_random_keys.py  wait-for-postgres.sh  wait_for_nginx.py
backend/src/: asgi.py  urls.py  wsgi.py
backend/src/common/: models.py  permissions.py  serializers.py  views.py
backend/src/common/migrations/: 0001_initial.py  0002_initial.py
backend/src/common/social_pipeline/: user.py
backend/src/config/: celery.py
backend/src/config/settings/: __init__.py  _errors.py  _utils.py  cloud_settings.py  common.py  currency_settings.py  database_settings.py  drf_settings.py  email_settings.py  logging_settings.py  oauth_settings.py  payment_gateway_settings.py  redis_settings.py
backend/src/files/: models.py
backend/src/files/migrations/: 0001_initial.py  0002_initial.py
backend/src/genre_ai/: apps.py  services.py  urls.py  views.py
backend/src/lib/clients/: zeptomail.py
backend/src/lib/django/: errors.py  superlazyroutertools.py  views_mixin.py
backend/src/lib/utils/: uuid7.py
backend/src/notifications/: Notifier.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/src/notifications/migrations/: 0001_initial.py  0002_initial.py
backend/src/reset_password/: routes.py
backend/src/staticfiles/: staticfiles.json
backend/src/users/: apps.py  auth.py  encryption.py  mfa_services.py  models.py  password.py  permissions.py  serializers.py  services.py  signals.py  tests.py  urls.py  utils.py
backend/src/users/enums/: bank_codes.py
backend/src/users/migrations/: 0001_initial.py  0002_user_institution.py  0003_user_active_organization.py  0004_alter_user_onboarding_status.py
backend/src/users/views/: __init__.py  views_auth.py  views_oauth.py  views_user.py
backend/tests/: classify_audio.py
frontend/: Makefile  package-lock.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+72 files in other folders)
